WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156368
REGRESSION (
r194898
): Multi download of external SVG defs file by <use> xlinks:href (caching)
https://bugs.webkit.org/show_bug.cgi?id=156368
Summary
REGRESSION (r194898): Multi download of external SVG defs file by <use> xlink...
hexalys
Reported
2016-04-07 14:42:43 PDT
Created
attachment 275939
[details]
Sample network pane view of multi download on cold cache You can notice this bug while looking at the Network panel in the Web Inspector on latest Safari 9 or Nightly. The SVG file is requested 5 times for 5 different fragment identifiers. It appears to be a Safari 9.3 regression. I am not seeing the problem on a 9.2 Simulator or older QtWebkit(s). See URL for repro and snapshot.
Attachments
Sample network pane view of multi download on cold cache
(135.88 KB, image/png)
2016-04-07 14:42 PDT
,
hexalys
no flags
Details
patch
(79.58 KB, patch)
2016-04-22 06:19 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(13.72 KB, patch)
2016-04-22 06:23 PDT
,
Antti Koivisto
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2016-04-07 14:52:31 PDT
<
rdar://problem/25611746
>
bjankord
Comment 2
2016-04-21 12:21:11 PDT
I am seeing this issue in Safari 9.1 and Mobile Safari 9.3 on iOS
Lionel
Comment 3
2016-04-21 12:40:00 PDT
Seems to be a 9^ regression, since I have the same behaviour in 9.1 (OSX 10.11.4) but not in Safari 8.0.2 (OSX 10.10.1).
Timothy Hatcher
Comment 4
2016-04-21 12:57:05 PDT
Another test case here:
https://github.com/martinwolf/safari-9-svg-external-content-bug
Lionel
Comment 5
2016-04-21 14:01:45 PDT
(In reply to
comment #4
)
> Another test case here: >
https://github.com/martinwolf/safari-9-svg-external-content-bug
Deployed this repo here: - External:
https://safari-9-svg-external-content-bug-rmmbpapqov.now.sh/svg-use-external.html
- Inline:
https://safari-9-svg-external-content-bug-rmmbpapqov.now.sh/svg-use-inline.html
Simon Fraser (smfr)
Comment 6
2016-04-21 16:06:57 PDT
Regressed in
http://trac.webkit.org/changeset/194898
rdar://problem/25572061
Antti Koivisto
Comment 7
2016-04-22 06:19:58 PDT
Created
attachment 277056
[details]
patch
Antti Koivisto
Comment 8
2016-04-22 06:23:48 PDT
Created
attachment 277057
[details]
patch
Stephanie (Sullivan) Rewis
Comment 9
2016-04-22 07:44:07 PDT
This is pretty huge since our design system uses large sprites of our icons and the way they're currently downloading every time is a very big problem. I hope this will be prioritized and fixed quickly.
Simon Fraser (smfr)
Comment 10
2016-04-22 10:15:20 PDT
Comment on
attachment 277057
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=277057&action=review
> Source/WebCore/loader/TextResourceDecoder.h:55 > + bool hasEqualEncodingForCharset(const String& charset) const;
'charset' argument name can be removed.
> LayoutTests/ChangeLog:16 > + * platform/mac/fast/frames/frame-set-scaling-3d-expected.png: > + * platform/mac/fast/frames/frame-set-scaling-centered-expected.png: > + * platform/mac/fast/frames/frame-set-scaling-expected.png: > + * platform/mac/fast/frames/frame-set-scaling-rotate-expected.png: > + * platform/mac/fast/frames/frame-set-scaling-skew-expected.png:
I don't think you meant to include these in the changelog.
Antti Koivisto
Comment 11
2016-04-22 10:37:21 PDT
https://trac.webkit.org/r199881
Elliot Geno
Comment 12
2016-04-29 19:54:15 PDT
I think I found an additional bug... No SVGs are caching with an object tag:
https://dl.dropboxusercontent.com/u/1256960/%20Research/JS/SVG_Parameters/dotObjectBug.html
Brady Eidson
Comment 13
2016-04-29 20:26:14 PDT
(In reply to
comment #12
)
> I think I found an additional bug... No SVGs are caching with an object tag: >
https://dl.dropboxusercontent.com/u/1256960/%20Research/JS/SVG_Parameters/
> dotObjectBug.html
That sounds like a related but different bug. Could you file a new one to track it?
hexalys
Comment 14
2016-06-28 19:29:41 PDT
(In reply to
comment #13
)
> (In reply to
comment #12
) > > I think I found an additional bug... No SVGs are caching with an object tag: > >
https://dl.dropboxusercontent.com/u/1256960/%20Research/JS/SVG_Parameters/
> > dotObjectBug.html > > That sounds like a related but different bug. > > Could you file a new one to track it?
I believe that is already a bug for this:
https://bugs.webkit.org/show_bug.cgi?id=106180
But I don't see a caching issue <object data=".svg"> in 202569.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug