Source/WebCore/loader/cache/CachedCSSStyleSheet.h
@@ -55,6 +55,7 @@ namespace WebCore {
 
         void setEncoding(const String&) override;
         String encoding() const override;
+        const TextResourceDecoder* textResourceDecoder() const override { return m_decoder.get(); }
         void finishLoading(SharedBuffer*) override;
         void destroyDecodedData() override;
 
