Source/WebCore/loader/cache/CachedSVGDocument.h
@@ -41,6 +41,7 @@ private:
     bool mayTryReplaceEncodedData() const override { return true; }
     void setEncoding(const String&) override;
     String encoding() const override;
+    const TextResourceDecoder* textResourceDecoder() const override { return m_decoder.get(); }
     void finishLoading(SharedBuffer*) override;
 
     RefPtr<SVGDocument> m_document;
