Source/WebCore/loader/cache/CachedXSLStyleSheet.h
@@ -47,6 +47,7 @@ private:
     void didAddClient(CachedResourceClient*) override;
     void setEncoding(const String&) override;
     String encoding() const override;
+    const TextResourceDecoder* textResourceDecoder() const override { return m_decoder.get(); }
     void finishLoading(SharedBuffer*) override;
 
     String m_sheet;
